--- a/javaFX_app/src/main/resources/MyScene.fxml
+++ b/javaFX_app/src/main/resources/MyScene.fxml
@@ -11,13 +11,13 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="butt_count" layoutX="270.0" layoutY="306.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="95.0" text="Посчитать" />
-            <ComboBox fx:id="change_example" layoutX="29.0" layoutY="22.0" prefHeight="27.0" prefWidth="146.0" promptText="SortLexicArray " visibleRowCount="2" />
+            <Button fx:id="butt_count" layoutX="270.0" layoutY="306.0" mnemonicParsing="false" onAction="#countExample" prefHeight="45.0" prefWidth="95.0" text="Посчитать" />
+            <ComboBox fx:id="change_example" layoutX="29.0" layoutY="22.0" prefHeight="27.0" prefWidth="146.0" promptText="Выберите задачу" visibleRowCount="2" />
             <TextArea fx:id="field_enter" layoutX="29.0" layoutY="77.0" prefHeight="200.0" prefWidth="270.0" />
             <TextArea fx:id="field_result" layoutX="331.0" layoutY="77.0" prefHeight="200.0" prefWidth="276.0" />
-            <Button fx:id="butt_save_result" layoutX="205.0" layoutY="23.0" mnemonicParsing="false" text="Сохранить результат" />
-            <Button fx:id="butt_load_result" layoutX="350.0" layoutY="23.0" mnemonicParsing="false" text="Загрузить результат" />
-            <Button fx:id="butt_clear_screen" layoutX="489.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Очистить экран" />
+            <Button fx:id="butt_save_result" layoutX="205.0" layoutY="23.0" mnemonicParsing="false" onAction="#saveResult" text="Сохранить результат" />
+            <Button fx:id="butt_load_result" layoutX="350.0" layoutY="23.0" mnemonicParsing="false" onAction="#loadResult" text="Загрузить результат" />
+            <Button fx:id="butt_clear_screen" layoutX="489.0" layoutY="23.0" mnemonicParsing="false" onAction="#clearScreen" prefHeight="25.0" prefWidth="126.0" text="Очистить экран" />
             <Label fx:id="lab_field_enter" layoutX="29.0" layoutY="60.0" text="Ввод данных:" />
             <Label fx:id="lab_field_result" layoutX="331.0" layoutY="60.0" text="Результат:" />
       </children>
