--- a/javaFX_app/src/main/resources/MyScene.fxml
+++ b/javaFX_app/src/main/resources/MyScene.fxml
@@ -13,7 +13,7 @@
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
             <Button fx:id="buttonCountExample" layoutX="270.0" layoutY="306.0" mnemonicParsing="false" onAction="#countExample" prefHeight="45.0" prefWidth="95.0" text="Посчитать" />
-            <ComboBox fx:id="changeExample" layoutX="29.0" layoutY="22.0" prefHeight="27.0" prefWidth="146.0" promptText="Выберите задачу" visibleRowCount="2" />
+            <ComboBox fx:id="changeExample" layoutX="29.0" layoutY="22.0" onAction="#chooseExample" prefHeight="27.0" prefWidth="146.0" promptText="Выберите задачу" visibleRowCount="2" />
             <TextArea fx:id="fieldEnter" layoutX="29.0" layoutY="77.0" prefHeight="200.0" prefWidth="270.0" />
             <TextArea fx:id="fieldResult" layoutX="331.0" layoutY="77.0" prefHeight="200.0" prefWidth="276.0" />
             <Button fx:id="buttonSaveResult" layoutX="205.0" layoutY="23.0" mnemonicParsing="false" onAction="#saveResult" text="Сохранить результат" />
